# libbricks

./: .clang_complete  .gitignore  .gitmodules  Android.mk  CMakeLists.txt  Makefile  Makefile.i  Makefile.pc  Makefile.pc.mk  Makefile.test  README.md  TODO  cmake  common.mk  config.h.in  ctest  toolchain.android.cmake  toolchain.ios.cmake
cmake/: FindFFMPEG.cmake  FindFreetype.cmake  FindJNI.cmake  FindLibZip.cmake  cmake.sh  ctest.sh  toolchain.android.cmake  toolchain.clang.cmake  toolchain.emscripten.cmake  toolchain.ios.cmake  toolchain.mingw32.cmake
docs/: Conventions  Conventions.md  DesignConsiderations.md  StrictConventions.md  TODO
include/: bricks.h  bricks.hpp
include/bricks/: alloc.h  audio.h  audio.hpp  class.h  collections.h  collections.hpp  compression.hpp  config.h  cryptography.hpp  delegate.h  delegate_template.h  exception.h  imaging.hpp  io.h  io.hpp  java.hpp  object.h  objectpool.h  reader.h  sfinae.h  string.h  threading.h  threading.hpp  types.h
include/bricks/audio/: audiobuffer.h  audiocodec.h  decoder.h  ffmpegaudiodecoder.h  ffmpegcodec.h  ffmpegdecoder.h  midi.h  midireader.h  miditypes.h
include/bricks/collections/: array.h  array_stl.h  autoarray.h  collection.h  comparison.h  deque_internal.h  dictionary.h  dictionary_stl.h  iterator.h  list.h  listguard.h  queue.h  stack.h  stack_stl.h
include/bricks/compression/: zipfilesystem.h
include/bricks/core/: arglist.h  arglist_template.h  autopointer.h  copypointer.h  data.h  delegate.h  delegate_internal.h  event.h  event_internal.h  exception.h  loosedynamicpointer.h  loosepointer.h  math.h  object.h  pointer.h  random.h  returnpointer.h  sfinae.h  string.h  time.h  timespan.h  typeinfo.h  types.h  value.h
include/bricks/cryptography/: crc32.h  hash.h  hashalgorithm.h
include/bricks/imaging/: atlasfont.h  bitmap.h  colour.h  ffmpegvideodecoder.h  font.h  freetypefont.h  image.h  png.h  subimage.h  videocodec.h
include/bricks/internal/: alloc.h  alloc_template.h  arglist.h  arglist_template.h  class.h  data.h  delegate.h  event.h  exception.h  objectpool.h  string.h  typeinfo.h  value.h
include/bricks/io/: cachestream.h  console.h  endian.h  fileinfo.h  filenode.h  filepath.h  filestream.h  filesystem.h  memorystream.h  navigator.h  nullstream.h  serializer.h  stream.h  streamnavigator.h  streamreader.h  streamwriter.h  substream.h  types.h
include/bricks/java/: jclass.h  jfield.h  jmethod.h  jmethoddelegate.h  jmethoddelegate_internal.h  jobject.h  jreference.h  jvm.h
include/bricks/java/lang/: array.h  object.h  string.h
include/bricks/threading/: condition.h  conditionlock.h  monitor.h  mutex.h  mutexlock.h  semaphore.h  task.h  taskqueue.h  thread.h  threadlocalstorage.h  timedtry_internal.h
sample/source/: main.cpp
source/: audio.cpp  bricksall.hpp  exception.cpp  object.cpp  string.cpp  timespan.cpp  value.cpp
source/audio/: ffmpegaudiodecoder.cpp  ffmpegcodec.cpp  ffmpegdecoder.cpp  midireader.cpp
source/compression/: zipfilesystem.cpp
source/core/: data.cpp  exception.cpp  object.cpp  random.cpp  string.cpp  time.cpp  timespan.cpp  value.cpp
source/cryptography/: crc32.cpp  hash.cpp
source/imaging/: bitmap.cpp  colour.cpp  ffmpegvideodecoder.cpp  font.cpp  freetypefont.cpp  image.cpp  png.cpp  videocodec.cpp
source/io/: cachestream.cpp  console.cpp  filesystem.cpp  memorystream.cpp  serializer.cpp  streamnavigator.cpp  streamreader.cpp  streamwriter.cpp  substream.cpp
source/java/: jclass.cpp  jfield.cpp  jmethod.cpp  jobject.cpp  jreference.cpp  jvm.cpp
source/threading/: condition.cpp  conditionlock.cpp  mutex.cpp  mutexlock.cpp  semaphore.cpp  task.cpp  taskqueue.cpp  thread.cpp  threadlocalstorage.cpp
test/: CMakeLists.txt  Makefile  audio-ffmpeg.cpp  audio-midi.cpp  brickstest.hpp  collections-listguard.cpp  compression-zipfilesystem.cpp  core-value.cpp  cryptography-hash.cpp  imaging-ffmpeg.cpp  imaging-font.cpp  imaging-image.cpp  imaging-png.cpp  io-navigator.cpp  io-stream.cpp  main.cpp  threading-thread.cpp
test/data/: test.mid  test.mkv
test/source/: main.cpp
xcode/: common-debug.xcconfig  common-release.xcconfig  common.xcconfig  config-debug.xcconfig  config-release.xcconfig  config.xcconfig  project.pbxproj
xcode/include-darwin/bricks/: config.h
xcode/include-ios/bricks/: config.h
xcode/libbricks.xcodeproj/: project.pbxproj
xcode/libbricks.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
